@@ -1888,8 +1888,9 @@ This augmented matrix represents the linear system $x_1=4$, $x_2=-2$, $0=0$, $0=
 \end{bmatrix}
 </alignmath>
 <br /><br />
-(a)\quad Row-reduce each matrix and determine that the reduced row-echelon forms of $B$ and $C$ are identical.  From this argue that $B$ and $C$ are row-equivalent.<br /><br />
-(b)\quad In the proof of <acroref type="theorem" acro="RREFU" />, we begin by arguing that entries of row-equivalent matrices are related by way of certain scalars and sums.  In this example, we would write that entries of $B$ from row $i$ that are in column $j$ are linearly related to the entries of $C$ in column $j$ from all three rows
+<ol>
+<li>Row-reduce each matrix and determine that the reduced row-echelon forms of $B$ and $C$ are identical.  From this argue that $B$ and $C$ are row-equivalent.</li>
+<li>In the proof of <acroref type="theorem" acro="RREFU" />, we begin by arguing that entries of row-equivalent matrices are related by way of certain scalars and sums.  In this example, we would write that entries of $B$ from row $i$ that are in column $j$ are linearly related to the entries of $C$ in column $j$ from all three rows
 <alignmath>
 \matrixentry{B}{ij}
 <![CDATA[&=]]>
@@ -1899,10 +1900,13 @@ This augmented matrix represents the linear system $x_1=4$, $x_2=-2$, $0=0$, $0=
 <![CDATA[&]]>
 <![CDATA[1&\leq j\leq 4]]>
 </alignmath>
-For each $1\leq i\leq 3$ find the corresponding three scalars in this relationship.  So your answer will be nine scalars, determined three at a time.
+For each $1\leq i\leq 3$ find the corresponding three scalars in this relationship.  So your answer will be nine scalars, determined three at a time.</li>
+</ol>
 </problem>
-<solution contributor="robertbeezer">(a)\quad Let $R$ be the common reduced row-echelon form of $B$ and $C$.  A sequence of row operations converts $B$ to $R$ and a second sequence of row operations converts $C$ to $R$. If we <q>reverse</q> the second sequence's order, and reverse each individual row operation (see <acroref type="exercise" acro="RREF.T10" />) then we can begin with $B$, convert to $R$ with the first sequence, and then convert to $C$ with the reversed sequence.  Satisfying <acroref type="definition" acro="REM" /> we can say $B$ and $C$ are row-equivalent matrices.<br /><br />
-(b)\quad We will work this carefully for the first row of $B$ and just give the solution for the next two rows.  For row 1 of $B$ take $i=1$ and we have
+<solution contributor="robertbeezer">
+<ol>
+<li>Let $R$ be the common reduced row-echelon form of $B$ and $C$.  A sequence of row operations converts $B$ to $R$ and a second sequence of row operations converts $C$ to $R$. If we <q>reverse</q> the second sequence's order, and reverse each individual row operation (see <acroref type="exercise" acro="RREF.T10" />) then we can begin with $B$, convert to $R$ with the first sequence, and then convert to $C$ with the reversed sequence.  Satisfying <acroref type="definition" acro="REM" /> we can say $B$ and $C$ are row-equivalent matrices.</li>
+<li>We will work this carefully for the first row of $B$ and just give the solution for the next two rows.  For row 1 of $B$ take $i=1$ and we have
 <alignmath>
 \matrixentry{B}{1j}
 <![CDATA[&=]]>
@@ -2005,6 +2009,8 @@ So the unique solution is $\delta_{11}=2$, $\delta_{12}=-3$, $\delta_{13}=-2$.  
 <![CDATA[&]]>
 <![CDATA[\delta_{33}&=5]]>
 </alignmath>
+</li>
+</ol>
 </solution>
 </exercise>
 
