@@ -41,6 +41,7 @@ Typo:  LaTeX/XML formatting in Solutions EE.C23, EE.C24, EE.C25 (Caden Robinson)
 Typo:  LaTeX/XML formatting in Example DAB (Ben Boe)
 Typo:  Exercise PEE.T22 "had" to "has" (Dan Messenger)
 Typo:  Example SAV, misleading misalignment in matrix (Mitch Benning, Davis Schubert)
+Typo:  LaTeX/XML formatting in Exercise, Solution RREF.M40 (Aidan Meacham)
 
 MAJOR SOURCE FORMAT CHANGE
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
